--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "shoppies",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.8", 
+    "node": "14.11.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
